update search system and query params